--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<h1>Lasagna</h1>
+<a href="recipes/lasagna.html">Lasagna Recipe</a>
 
-
-
+<head>
+    <meta charset="UTF-8">
+    <title>My Recipes</title>
+</head>
 
 
 
