--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <h1>Lasagna</h1>
 <a href="recipes/lasagna.html">Lasagna Recipe</a>
-
+<title>My Odin Recipes</title>
 <head>
     <meta charset="UTF-8">
     <title>My Recipes</title>
