--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>My Recipes</title>
-    </head>
-    <h1>HI</h1>
+
+<head>
+    <meta charset="UTF-8">
+    <title>My Recipes</title>
+</head>
+<h1>Hello</h1>
 
 
 
